<resources>
    <string name="app_name">GoodBoy</string>
    <string name="title_breeds">Породы</string>
    <string name="title_vote">Голосование</string>
    <string name="title_notifications">Notifications</string>
    <string name="Breeds">Порода:</string>
    <string name="id_breed">id:</string>
    <string name="temperament">Характер:</string>
    <string name="weight_title">Вес:</string>
    <string name="height_title">Рост:</string>
    <string name="origin">Места обитания:</string>
    <string name="age_title">Возраст:</string>
    <string name="weight">%1$d кг.</string>
    <string name="height">%1$d см.</string>
    <string name="breed_detail_label">Информация о породе</string>
    <string name="my_vote">Мои голоса</string>
    <string name="to_vote">Проголосовать</string>
</resources>